--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "daisyui": "^1.13.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
     "react-query": "3.21.0",
     "react-router-dom": "5.2.0",
     "uuid": "^8.3.2"
@@ -27,6 +28,7 @@
     "@tailwindcss/forms": "0.3.3",
     "@types/react": "17.0.19",
     "@types/react-dom": "17.0.9",
+    "@types/react-gtm-module": "^2.0.1",
     "@types/react-router-dom": "5.1.8",
     "@typescript-eslint/eslint-plugin": "4.29.2",
     "@typescript-eslint/parser": "4.29.3",
