--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,13 +41,16 @@
         "import/no-extraneous-dependencies": [
           "error",
           {
-            "devDependencies": ["vite.config.ts"]
+            "devDependencies": ["vite.config.ts", "./src/api/mirage/index.ts"]
           }
         ],
 
         "unicorn/no-null": ["off"],
         "jsx-a11y/click-events-have-key-events": ["off"],
         "jsx-a11y/no-static-element-interactions": ["off"],
+        "@typescript-eslint/no-unsafe-call": ["off"],
+        "@typescript-eslint/no-unsafe-member-access": ["off"],
+        "@typescript-eslint/no-unsafe-assignment": ["off"],
 
         "unicorn/filename-case": [
           "error",
