--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@cypress/code-coverage": "3.9.10",
     "@tailwindcss/forms": "0.3.3",
+    "@types/faker": "^5.5.8",
     "@types/react": "17.0.19",
     "@types/react-dom": "17.0.9",
     "@types/react-gtm-module": "^2.0.1",
@@ -45,8 +46,10 @@
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-unicorn": "35.0.0",
+    "faker": "^5.5.3",
     "husky": "7.0.2",
     "lint-staged": "11.1.2",
+    "miragejs": "^0.1.41",
     "postcss": "8.3.6",
     "prettier": "2.3.2",
     "rollup-plugin-istanbul": "3.0.0",
