--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
+    "react-hook-form": "^7.19.0",
     "react-query": "3.26.0",
     "react-router-dom": "5.3.0",
     "uuid": "^8.3.2"
