--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.19.0",
     "react-query": "3.26.0",
     "react-router-dom": "5.3.0",
+    "react-tooltip": "^4.2.21",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
