--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.19.0",
     "react-query": "3.26.0",
-    "react-router-dom": "5.3.0",
+    "react-router-dom": "^6.0.1",
     "react-tooltip": "^4.2.21",
     "uuid": "^8.3.2"
   },
