--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "dev": "vite --open",
     "prepare": "husky install",
     "serve": "vite preview",
-    "serve:test": "start-server-and-test 'yarn serve' http://localhost:5000",
-    "test": "yarn serve:test 'cypress open'",
-    "test:headless": "yarn serve:test 'cypress run'"
+    "serve:test": "start-server-and-test 'yarn serve' http://localhost:5000"
   },
   "dependencies": {
-    "@types/uuid": "^8.3.1",
-    "daisyui": "^1.14.3",
+    "@types/uuid": "8.3.3",
+    "daisyui": "1.20.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
@@ -23,10 +21,10 @@
     "react-query": "3.26.0",
     "react-router-dom": "^6.0.1",
     "react-tooltip": "^4.2.21",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "vite-plugin-istanbul": "^2.3.0"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "3.9.10",
     "@tailwindcss/forms": "0.3.3",
     "@types/faker": "^5.5.8",
     "@types/react": "17.0.19",
@@ -37,7 +35,6 @@
     "@typescript-eslint/parser": "4.33.0",
     "@vitejs/plugin-react-refresh": "1.3.6",
     "autoprefixer": "10.3.7",
-    "cypress": "8.6.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
@@ -55,13 +52,14 @@
     "postcss": "8.3.6",
     "prettier": "2.3.2",
     "rollup-plugin-istanbul": "3.0.0",
+    "rollup-plugin-visualizer": "^5.5.4",
     "start-server-and-test": "1.13.1",
     "stylelint": "13.13.1",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "22.0.0",
     "tailwindcss": "2.2.16",
     "typescript": "4.4.3",
-    "vite": "2.5.1",
+    "vite": "2.7.10",
     "vite-plugin-pwa": "0.8.1",
     "vite-tsconfig-paths": "3.3.13"
   },
