--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,12 @@
         "import/no-extraneous-dependencies": [
           "error",
           {
-            "devDependencies": ["vite.config.ts", "./src/api/mirage/index.ts"]
+            "devDependencies": [
+              "vite.config.ts",
+              "./src/api/mirage/index.ts",
+              "**/e2e/**/*.ts",
+              "playwright.config.ts"
+            ]
           }
         ],
 
@@ -52,6 +57,9 @@
         "@typescript-eslint/no-unsafe-call": ["off"],
         "@typescript-eslint/no-unsafe-member-access": ["off"],
         "@typescript-eslint/no-unsafe-assignment": ["off"],
+        "@typescript-eslint/lines-between-class-members": ["off"],
+        "no-void": ["off"],
+        "import/prefer-default-export": ["off"],
 
         "unicorn/filename-case": [
           "error",
