--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@types/uuid": "8.3.3",
+    "canvas-confetti": "^1.5.1",
+    "classnames": "^2.3.1",
     "daisyui": "1.20.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -21,12 +23,14 @@
     "react-query": "3.26.0",
     "react-router-dom": "^6.0.1",
     "react-tooltip": "^4.2.21",
+    "theme-change": "^2.0.2",
     "uuid": "^8.3.2",
     "vite-plugin-istanbul": "^2.3.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.19.0",
     "@tailwindcss/forms": "0.3.3",
+    "@types/canvas-confetti": "^1.4.2",
     "@types/faker": "^5.5.8",
     "@types/react": "17.0.19",
     "@types/react-dom": "17.0.9",
@@ -35,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "@vitejs/plugin-react-refresh": "1.3.6",
+    "animated-tailwindcss": "^3.2.7",
     "autoprefixer": "10.3.7",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.32.0",
