--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,6 +54,7 @@
         "jsx-a11y/click-events-have-key-events": ["off"],
         "jsx-a11y/no-static-element-interactions": ["off"],
         "react/jsx-props-no-spreading": ["off"],
+        "react/require-default-props": ["off"],
         "@typescript-eslint/no-unsafe-call": ["off"],
         "@typescript-eslint/no-unsafe-member-access": ["off"],
         "@typescript-eslint/no-unsafe-assignment": ["off"],
