--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "canvas-confetti": "^1.5.1",
     "classnames": "^2.3.1",
     "daisyui": "1.20.1",
+    "dexie": "^3.2.2",
+    "dexie-react-hooks": "^1.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
