--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.24.4",
     "@types/uuid": "8.3.3",
     "canvas-confetti": "^1.5.1",
     "classnames": "^2.3.1",
